--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -16,11 +16,21 @@
 }
 
 .riktangle {
+position: relative;
     /* background: url('./../../images/Rectangle519.svg'); */
     overflow: hidden;
-    -webkit-clip-path: polygon(39% 0%, 116% 25%, 103% 80%, 49% 99%, 0% 80%, 0% 21%);
-clip-path: polygon(39% 0%, 116% 25%, 103% 80%, 49% 99%, 0% 80%, 0% 21%);
+    -webkit-clip-path: polygon(39% 0%, 116% 17%, 103% 80%, 49% 99%, 0% 80%, 0% 21%);
+clip-path: polygon(39% 0%, 116% 17%, 103% 80%, 49% 99%, 0% 80%, 0% 21%);
     
+}
+
+.words {
+    width:74%;
+    height: auto;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width: 1828px) {
