--- a/blocks/main/container-swiper.css
+++ b/blocks/main/container-swiper.css
@@ -69,7 +69,7 @@
     }
     .swiper-pagination-bullet {
         background: green;
-        margin-left:10px;
+        margin-left8px;
     }
     .swiper-pagination-bullet:nth-last-child() {
         margin-left:0;
