--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -198,7 +198,8 @@
 }
 
 .popup__button-close:hover {
-    box-shadow: 0px 2px 10px rgba(53, 95, 71, 0.6);
+    -webkit-filter: drop-shadow(0px 2px 10px rgba(53, 95, 71, 0.6));
+    filter: drop-shadow(0px 2px 10px rgba(53, 95, 71, 0.6))
 }
 
 ._error {
