--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -10,6 +10,10 @@ position: relative;
     height: 759px;
 }
 
+.end {
+    visibility: hidden;
+}
+
 .berries {
     position: absolute;
     width: 100%;
@@ -30,6 +34,9 @@ position: relative;
     z-index: 2;
 }
 .p2{
+
+    top:0px;
+    
     z-index: 6;
     
  }
