--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -30,34 +30,52 @@ position: relative;
     z-index: 20;
 }
 .p1{
-    
-    z-index: 2;
+    top: -42px;
+    left: -44px;
+   z-index: 7;
+    width: 104%;
 }
 .p2{
-    width:110%;
-    top:-70px;
-    z-index: 6;
-    overflow-x: hidden;
-    
+    top: -72px;
+    width: 98.3%;
+    right: 78px;
+   z-index: 5;
  }
 .p3 {
     animation: opacity 6s forwards;
-    z-index: 5;
+    z-index: 4;
+    top: -72px;
+    width: 97.3%;
+    right: 78px;
 }
 .p4 {
-    z-index: 4;
+    z-index: 2;
+    top:-70px;
+    width:97%;
+    right:80px;
 }
 .p5{
-    
-    z-index: 1;
+    top: 137px;
+    left: 302px;
+    width: 84%
 }
 .p6 {
-    z-index: 3;
-    
+    z-index: 2;
+    top: 29px;
+    left: -72px;
+    width: 108%;
 }
 .p7{
-    
-    z-index: 4;
+    top: -56px;
+    left: 2px;
+    width: 95%;
+  z-index: 6;
+}
+
+.p8{
+    top: 306px;
+    width: 65%;
+    left: 361px;
 }
 
 .header__logo {
@@ -69,6 +87,10 @@ position: relative;
 }
 
 @media screen and (max-width: 1440px) {
+    .header__container {
+        margin-bottom: 13px;
+    }
+    
     .header__content {
         height: 571px;  
     }
@@ -82,13 +104,106 @@ position: relative;
         max-width: 625px;
         max-height: 427px;
     }
-}
-@media screen and (max-width: 1024px) {
-    #end {
-        display: none;
+    .p1{
+        top: -28px;
+        left: -56px;
+        z-index: 7;
+        width: 107%;
     }
+    .p2{
+        top: -72px;
+        width: 106.3%;
+        right: -55px;
+        z-index: 5;
+     }
+    .p3 {
+        animation: opacity 6s forwards;
+        z-index: 4;
+        top: -72px;
+        width: 97.3%;
+        right: 78px;
+    }
+    .p4 {
+        z-index: 3;
+        top:-70px;
+        width:97%;
+        right:80px;
+    }
+    .p5{
+        top: 121px;
+        left: 240px;
+        width: 84%;
+    }
+    .p6 {
+        z-index: 2;
+        top: 29px;
+        left: -72px;
+        width: 112%;
+    }
+    .p7{
+        top: -39px;
+        left: 2px;
+        width: 95%;
+        z-index: 6;
+    }
+    
+    .p8{
+        top: 306px;
+        width: 65%;
+        left: 361px;
+    }
+
 }
+
 @media screen and (max-width: 1024px) {
+    .p1{
+        top: -24px;
+        left: -30px;
+        z-index: 7;
+        width: 105%;
+    }
+    .p2{
+        top: -45px;
+        width: 106.3%;
+        right: -44px;
+        z-index: 5;
+     }
+    .p3 {
+        animation: opacity 6s forwards;
+        z-index: 4;
+        top: -33px;
+        width: 95.3%;
+        right: 67px;
+    }
+    .p4 {
+        z-index: 3;
+        top: -31px;
+        width: 95%;
+        right: 68px;
+    }
+    .p5{
+        top: 90px;
+        left: 135px;
+        width: 86%;
+    }
+    .p6 {
+        z-index: 2;
+        top: 29px;
+        left: -72px;
+        width: 112%;
+    }
+    .p7{
+        top: -39px;
+        left: 2px;
+        width: 95%;
+        z-index: 6;
+    }
+    
+    .p8{
+        top: 306px;
+        width: 65%;
+        left: 361px;
+    }
     .header__content {
         height: 412px;  
     }
@@ -140,9 +255,11 @@ position: relative;
     }
 }
 
+
+
 @media screen and (max-width: 360px) {
     .header__content {
-        height:208px;  
+        height:223px;  
     }
     .header__logo{
         background: url('../../images/logo360.svg') center no-repeat;
@@ -150,5 +267,52 @@ position: relative;
     }    
     .header__container {
         max-width: 241px;
+    }
+    .p1{
+        top: -3px;
+        left: -104px;
+        z-index: 7;
+        width: 158%;
+    }
+    .p2{
+        top: 6px;
+        width: 141.3%;
+        right: -86px;
+        z-index: 5;
+     }
+    .p3 {
+        animation: opacity 6s forwards;
+        z-index: 4;
+        top: -17px;
+        width: 133.3%;
+        right: -30px;
+    }
+    .p4 {
+        z-index: 3;
+        top: -17px;
+        width: 133.3%;
+        right: -30px;
+    }
+    .p5{
+        top: 47px;
+        left: -3px;
+        width: 129%;
+    }
+    .p6 {
+        z-index: 2;
+        top: 10px;
+        left: -102px;
+        width: 165%;
+    }
+    .p7{
+        top: -15px;
+        left: -87px;
+        width: 142%;
+        z-index: 6;
+    }
+    .p8{
+        top: 85px;
+        width: 90%;
+        left: 31px;
     }
 }
