--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,9 +9,14 @@ position: relative;
     align-items: center;
     height: 759px;
 }
-
-.end {
-    visibility: hidden;
+.header__content1024 {
+    display: none;
+}
+.header__content414 {
+    display: none;
+}
+.header__content360 {
+    display: none;
 }
 
 .berries {
@@ -155,71 +160,76 @@ position: relative;
 
 }
 
-@media screen and (max-width: 1208px) {
-    .p1{
-        top: -24px;
-        left: -30px;
-        z-index: 7;
-        width: 105%;
-    }
-    .p2{
-        top: -45px;
-        width: 106.3%;
-        right: -44px;
-        z-index: 7;
-     }
-    .p3 {
-        animation: opacity 6s forwards;
-        z-index: 4;
-        top: -33px;
-        width: 95.3%;
-        right: 67px;
-    }
-    .p4 {
-        z-index: 3;
-        top: -31px;
-        width: 95%;
-        right: 68px;
-    }
-    .p5{
-        top: 90px;
-        left: 135px;
-        width: 86%;
-    }
-    .p6 {
-        z-index: 2;
-        top: 29px;
-        left: -72px;
-        width: 112%;
-    }
-    .p7{
-        top: -39px;
-        left: 2px;
-        width: 95%;
-        z-index: 6;
+@media screen and (max-width:1208px) {
+    .header__content {
+        height: 412px;
+        display: none;  
     }
     
-    .p8{
-        top: 306px;
-        width: 65%;
-        left: 361px;
-    }
-    .header__content {
-        height: 412px;  
-    }
-    .header__logo{
-        background: url('../../images/logo1024.svg') center no-repeat;
-        height: 304px;
-        margin-bottom: 15px;
-        margin-top:50px;
-    }
     .header__container {
         max-width: 443px;
         max-height: 304px;
+        margin-bottom: 15px;
     }
+
+    .header__content1024 {
+        height: 412px;
+        display: flex;
+        align-items: flex-end;
+    }
+    .berries-notblur {
+        width: 106%;
+        top: -20px;
+        left: -35px;
+        z-index: 4;
+    }
+    .vegatables {
+        width: 108%;
+        top: 8px;
+        left: -37px;
+        z-index: 1;
+    }
+    .blueberry {
+        width: 85%;
+        top: 70px;
+        left: 155px;
+    }
+    .blueberry-bugblur {
+        width: 106%;
+        top: -43px;
+        left: -33px;
+        z-index: 7;
+    }
+
+    .leaves {
+        width: 90%;
+        top: -26px;
+        left: 7px;
+        z-index: 3;
+    }
+    .leaves-blur {
+        width: 62%;
+        top: 142px;
+        left: 203px;
+    }
+    .tomato {
+        width: 94%;
+        top: -28px;
+        left: -12px;
+        z-index: 5;
+    }
+    .tomato-freez {
+        width: 94%;
+        top: -31px;
+        left: -14px;
+        animation: opacity 6s forwards;
+        z-index: 6;
 }
+    }
+
+
 @media screen and (max-width: 803px) {
-    .header__content {
+    .header__content1024 {
         height:300px;  
     }
     .header__logo{
@@ -230,36 +240,116 @@ position: relative;
     .header__container {
         max-width: 353px;
     }
+    
+}
+
+@media screen and (max-width: 663px) {
+    .blueberry {
+        width: 85%;
+        top: 46px;
+        left: 84px;
+    }
+    .leaves-blur {
+        width: 62%;
+        top: 81px;
+        left: 113px;
+    }
 }
 
 @media screen and (max-width: 626px) {
-    .header__content {
+    .header__content1024 {
         height:250px;  
     }
     .header__container {
         max-width: 300px;
     }
+    
 }
 
 @media screen and (max-width: 557px) {
-    .header__logo{
-        background: url('../../images/logo339.svg') center no-repeat; 
-        height: 233px; 
-        margin-bottom:0;
-    }
-    .header__content {
+    .header__content1024 {
         height:250px;  
     }
     .header__container {
         max-width: 241px;
     }
+    .blueberry-bugblur {
+        width: 110%;
+        top: -21px;
+        left: -35px;
+        z-index: 7;
+}
 }
 
 
 
 @media screen and (max-width: 414px) {
+    .header__content1024 {
+        display: none;
+    }
+    .header__content414 {
+        display: flex;
+        align-items: flex-end;
+        height:220px;
+    }
+   
+    .header__container {
+        max-width: 241px;
+        margin-bottom: 4px;
+    }
+    .vegatables {
+        width: 29%;
+        top: 5px;
+        left: -63px;
+    }
+    .raspberries {
+        width: 108%;
+        top: 141px;
+        left: -10px;
+    }
+    .blueberry {
+        width: 118%;
+        top: 40px;
+        left: -7px;
+    }
+    .leaves {
+        width: 85%;
+        top: -16px;
+        left: 46px;
+    }
+    .leaves-blur {
+        width: 91%;
+        top: 109px;
+        left: 46px;
+    }
+    .tomato {
+        width: 112%;
+        top: -27px;
+        left: 5px;
+    }
+    .tomato-freez {
+        width: 112%;
+        top: -27px;
+        left: 5px;
+        animation: opacity 6s forwards;
+    }
+    .bigblur{
+        width: 68px;
+        height: 68px;
+        top: 243px;
+        left: 305px;
+    }
+    }
+  
+
+@media screen and (max-width: 360px) {
+   
+    .header__content414 {
+        display: none;
+    }
     .header__content {
-        height:223px;  
+        height:223px;
+        display: none;
     }
     .header__logo{
         background: url('../../images/logo360.svg') center no-repeat;
@@ -267,52 +357,62 @@ position: relative;
     }    
     .header__container {
         max-width: 241px;
+        margin-bottom: 4px;
     }
-    .p1{
-        top: -3px;
-        left: -104px;
-        z-index: 7;
-        width: 158%;
+
+    .header__content360 {
+        display: initial;
+        height:223px;
+        display: flex;
+        align-items: flex-end;
     }
-    .p2{
-        top: 6px;
-        width: 141.3%;
-        right: -86px;
-        z-index: 7;
-     }
-    .p3 {
-        animation: opacity 6s forwards;
-        z-index: 4;
-        top: -17px;
-        width: 133.3%;
-        right: -30px;
+    .raspberries {
+        top: 123px;
+        left: -14px;
+        width: 105%;
+        z-index: 1;
     }
-    .p4 {
-        z-index: 3;
-        top: -17px;
-        width: 133.3%;
-        right: -30px;
+    .vegatables {
+        width: 29%;
+        left: -61px;
+        top: 5px;
+        z-index: 1;
     }
-    .p5{
-        top: 47px;
-        left: -3px;
-        width: 129%;
+    .berries-blur {
+        top: 41px;
+        left: -20px;
+        width: 122%;
     }
-    .p6 {
-        z-index: 2;
-        top: 10px;
-        left: -102px;
-        width: 165%;
-    }
-    .p7{
+
+    .leaves {
         top: -15px;
-        left: -87px;
-        width: 142%;
-        z-index: 6;
+        left: 39px;
+        width: 82%;
     }
-    .p8{
-        top: 85px;
-        width: 90%;
-        left: 31px;
+    .leaves-blur{
+        top: 94px;
+        left: 34px;
+        width: 89%;
+    }
+
+    .tomato {
+        top: -22px;
+        left: -2px;
+        width: 108%;
+        z-index: 1;
+    }
+    .tomato-freez {
+        top: -20px;
+        left: -2.8px;
+        width: 108%;
+        animation: opacity 6s forwards;
+        z-index: 2;
+    }
+    .berroes-bigblur {
+        width: 111%;
+        top: 243px;
+        left: -60px;
+        z-index: 2;
+        
     }
 }
