--- a/blocks/main/swiper.css
+++ b/blocks/main/swiper.css
@@ -70,9 +70,16 @@
         font-size: 25px;
     }
 }
+
+@media screen and (max-width: 414px) {
+    .swiper__title {
+        margin: 35px 0 0 0;
+    }
+}
+
+
 @media screen and (max-width: 360px) {
     .swiper__title {
         margin: 40.5px 0 0 0;
-        font-size: 25px;
     }
 }
