--- a/blocks/main/technologies.css
+++ b/blocks/main/technologies.css
@@ -11,6 +11,9 @@
     margin:50px 0 15px 0;
     font-family: 'Roboto Condensed Regular', 'Arial', 'Helvetica', sans-serif;
 }
+.technologies__title br {
+    display: none;
+}
 
 .technologies__content {
     padding: 55px 0 55px 0;
@@ -49,6 +52,10 @@
 @media screen and (max-width: 703px) {
     .technologies__content {
         max-width: 600px;
+       
+    }
+    .technologies__subtitle br {
+        display: none;
     }
 }
 @media screen and (max-width: 652px) {
@@ -82,11 +89,33 @@
         font-size: 15px;
     }
 }
-@media screen and (max-width: 360px) {
+
+@media screen and (max-width: 414px) {
+    
+    .technologies__content {
+        max-width: 320px;
+        padding: 30px 0 30px 0;
+    }
     .technologies__title {
         font-size: 18px;
         text-align: center;
         margin:20px auto 6px auto;
+        line-height: 130%;
+        letter-spacing: 0.02em;
+    }
+    .technologies__subtitle {
+        font-size: 14px;
+        line-height: 130%;
+        letter-spacing: 0.02em;
+    }
+    .technologies__title br {
+        display: initial;
+    }
+}
+@media screen and (max-width: 360px) {
+    .technologies__title {
+        font-size: 18px;
+        text-align: center;
         width:320px;
     }
     .technologies__subtitle {
