--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -228,6 +228,7 @@
     margin-left: auto;
     order: 2;
     display: none;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
 }
 
 .popup__done__container {
