--- a/blocks/main/swiper.css
+++ b/blocks/main/swiper.css
@@ -23,7 +23,7 @@
 .swiper__chain {
     width: 150px;
     height: 145px;
-    background-color:#DDDDDD;
+    background-color:#E2E2E2;
     border-radius: 15px; 
 }
 
