--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -83,13 +83,7 @@ position: relative;
     left: 361px;
 }
 
-.header__logo {
-    background: url('../../images/logo.svg') center no-repeat;
-    width: 833px;
-    height: 569px;
-    margin-top:150px;
-    z-index: 10;
-}
+
 
 @media screen and (max-width: 1440px) {
     .header__container {
@@ -99,12 +93,7 @@ position: relative;
     .header__content {
         height: 571px;  
     }
-    .header__logo{
-        background: url('../../images/logo1440.svg') center no-repeat;
-        height: 427px;
-        margin-bottom: 13px;
-        margin-top:100px;
-    }
+    
     .header__container {
         max-width: 625px;
         max-height: 427px;
@@ -229,11 +218,7 @@ position: relative;
     .header__content1024 {
         height:300px;  
     }
-    .header__logo{
-        background: url('../../images/header-logo803.svg') center no-repeat;
-        height: 261px;
-        margin-bottom: 15px;
-    }
+    
     .header__container {
         max-width: 353px;
     }
@@ -274,16 +259,30 @@ position: relative;
         left: -35px;
         z-index: 7;
     }
-}
-
-
-
-@media screen and (max-width: 414px) {
     .img-logo414 {
         width: 100%;
         height:auto;
         object-fit: cover;
     }
+}
+
+@media screen and (max-width: 414px) {
+    
+    .logo-title414 {
+        font-size: 10.777px;
+        line-height: 130%;
+        font-family: 'Roboto Condensed', sans-serif;
+        text-align: center;
+        font-weight: 500;
+        color: black;
+        margin:0;
+    }
+
+    .logo-title414 span {
+        font-weight: bold;
+        color: green;
+    }
+
     .header__content1024 {
         display: none;
     }
