--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@ html {
 body {
     overflow-x: hidden;
     background-color: #EEEEEE;
-    font-family: "Roboto Condenced", sans-serif;
+    font-family: "Roboto Condenced", "Arial", "Helvetica", sans-serif;
 }
 
 .container {
