--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -25,11 +25,13 @@
     display: none;
 }
 
+
+
 .words {
     width: 73.9%;
     height: auto;
     position: absolute;
-    top: 46.5%;
+    top: 50.37%;
     left: 49.9%;
     transform: translate(-50%, -50%);
 }
@@ -54,8 +56,8 @@
     .img-main {
         display: none;
     }
-    .riktangle414 {
+    /* .riktangle414 {
         display: none;
-    }
+    } */
 }
 
